🐛 fix(ci): Update release script to deploy, and skipRelease for GitHub

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
             - name: Publish to Central
               if: github.repository_owner == 'buildbound'
               run: |
-                  ./gradlew jreleaserFullRelease
+                  ./gradlew jreleaserDeploy
               env:
                   JRELEASER_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
                   JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
