✨ feat(menus): Added support to use player inventory as menu

--- a/test-plugin/src/main/resources/example-menu.yml
+++ b/test-plugin/src/main/resources/example-menu.yml
@@ -1,7 +1,14 @@
 title: "<rainbow>Example Menu</rainbow>"
-size: 27
+pattern:
+    - "- - - - # - - - -"
+
+player-pattern:
+    - "- - - # - - - - -"
+    - "- - # - - - - - -"
+    - "- # - - - - - - -"
+    - "# - - - - - - - -"
 
 menu-items:
     - display-item:
           material: DIAMOND_SWORD
-      slots: [ 13 ]
+      character: "#"
